fix: Issue with dark mode and image inversion, not fully fixed
Tidy up of code in script.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,10 @@ html[data-theme='dark'] {
     filter: invert(1) hue-rotate(180deg);
 }
 
+.park-img-invert {
+    filter: invert(1) hue-rotate(180deg);
+}
+
 /***** Layout Settings *****/
 
 
